# aio-salesforce

./: .pre-commit-config.yaml  README.md  README_new.md  RELEASE.md  config.example.json  contacts.parquet  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aio_salesforce/: __init__.py
src/aio_sf/: __init__.py
src/aio_sf/exporter/: __init__.py  arrow.py  bulk_export.py  parquet_writer.py
src/salesforce_to_s3/: __init__.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py
